--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+  <head>
+  <title>Hello</title>
+</head>
 
+<body>
+  <h1>about me</h1>
+  <p> Hello </p>
+</body>
+  <p> Hello </p>
+
+</html>
