--- a/aboutme.html
+++ b/aboutme.html
@@ -5,9 +5,10 @@
 </head>
 
 <body>
-  <h1>about me</h1>
-  <p> Hello </p>
+  <h1>About Me</h1>
+  <p>Hi I'm from the Bronx in New York City.</p>
+  <p>  </p>
 </body>
-  <p> Hello </p>
+
 
 </html>
