--- a/aboutme.html
+++ b/aboutme.html
@@ -6,8 +6,8 @@
 
 <body>
   <h1>About Me</h1>
-  <p>Hi I'm from the Bronx in New York City.</p>
-  <p>  </p>
+  <p>Hi I'm from the Bronx in New York City. Some facts about me are listed below</p>
+  <p> favorite tv show is the flash and Pretty Little Liars </p>
 </body>
 
 
