--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,8 @@
 <body>
   <h1>About Me</h1>
   <p>Hi I'm from the Bronx in New York City. Some facts about me are listed below</p>
-  <p> favorite tv show is the flash and Pretty Little Liars </p>
+  <p> Favorite tv show is the flash and Pretty Little Liars
+  favorite food is pizza and chicken</p>
 </body>
 
 
