--- a/aboutme.html
+++ b/aboutme.html
@@ -7,8 +7,9 @@
 <body>
   <h1>About Me</h1>
   <p>Hi I'm from the Bronx in New York City. Some facts about me are listed below</p>
-  <p> Favorite tv show is the flash and Pretty Little Liars
-  favorite food is pizza and chicken</p>
+  <p> Favorite tv shows is the Flash and Pretty Little Liars</p>
+  <p> Favorite food is pizza and chicken</p>
+  <p> Favorite color is blue</p>
 </body>
 
 
