--- a/aboutme.html
+++ b/aboutme.html
@@ -7,10 +7,13 @@
 <body>
   <h1>About Me</h1>
   <p>Hi I'm from the Bronx in New York City. Some facts about me are listed below</p>
-  <p> Favorite tv shows is the Flash and Pretty Little Liars</p>
-  <p> Favorite food is pizza and chicken</p>
-  <p> Favorite color is blue</p>
-</body>
+  <ul style="list-style-type:disc">
+  <li>Favorite tv shows is the Flash and Pretty Little Liar</li>
+  <li>Favorite food is pizza and chicken</li>
+  <li>Favorite color is blue</li>
+</ul>
+  <p> </p>
 
+</body>
 
 </html>
