--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
 
 <body>
   <h1>About Me</h1>
-  <p>Hi I'm from the Bronx in New York City. Some facts about me are listed below</p>
+  <p>Hi my name is Suyin. I'm from the Bronx in New York City. Some facts about me are listed below</p>
   <ul style="list-style-type:disc">
   <li>Favorite tv shows is the Flash and Pretty Little Liar</li>
   <li>Favorite food is pizza and chicken</li>
