--- a/aboutme.html
+++ b/aboutme.html
@@ -4,15 +4,20 @@
   <title>Hello</title>
 </head>
 
+<h2 style="background-color:blue;color:blue">
+Background-color set by using blue
+</h2>
+
 <body>
   <h1>About Me</h1>
-  <p>Hi my name is Suyin. I'm from the Bronx in New York City. Some facts about me are listed below</p>
+  <p>Hi my name is Suyin. I am a rising junior. I'm from the Bronx in New York City. Some facts about me are listed below</p>
   <ul style="list-style-type:disc">
   <li>Favorite tv shows is the Flash and Pretty Little Liar</li>
   <li>Favorite food is pizza and chicken</li>
   <li>Favorite color is blue</li>
+  <li>Favorite website is Netflix</li>
 </ul>
-  <p> </p>
+
 
 </body>
 
