--- a/aboutme.html
+++ b/aboutme.html
@@ -12,10 +12,11 @@ Background-color set by using blue
   <h1>About Me</h1>
   <p>Hi my name is Suyin. I am a rising junior. I'm from the Bronx in New York City. Some facts about me are listed below</p>
   <ul style="list-style-type:disc">
-  <li>Favorite tv shows is the Flash and Pretty Little Liar</li>
+  <li>Favorite tv shows is the Flash and Pretty Little Liars</li>
   <li>Favorite food is pizza and chicken</li>
   <li>Favorite color is blue</li>
   <li>Favorite website is Netflix</li>
+  <li>Favorite 
 </ul>
 
 
