--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@ Background-color set by using blue
   <li>Favorite food is pizza and chicken</li>
   <li>Favorite color is blue</li>
   <li>Favorite website is Netflix</li>
-  <li>Favorite 
+  <li>Favorite movie is Captain American: Civil War</li>
 </ul>
 
 
