--- a/aboutme.html
+++ b/aboutme.html
@@ -4,11 +4,9 @@
   <title>Hello</title>
 </head>
 
-<h2 style="background-color:blue;color:blue">
-Background-color set by using blue
-</h2>
 
-<body>
+
+<body style="background-color:blue;">
   <h1>About Me</h1>
   <p>Hi my name is Suyin. I am a rising junior. I'm from the Bronx in New York City. Some facts about me are listed below</p>
   <ul style="list-style-type:disc">
