--- a/aboutme.html
+++ b/aboutme.html
@@ -10,11 +10,11 @@
   <h1>About Me</h1>
   <p>Hi my name is Suyin. I am a rising junior. I'm from the Bronx in New York City. Some facts about me are listed below</p>
   <ul style="list-style-type:disc">
-  <li>Favorite tv shows is the Flash and Pretty Little Liars</li>
-  <li>Favorite food is pizza and chicken</li>
-  <li>Favorite color is blue</li>
-  <li>Favorite website is Netflix</li>
-  <li>Favorite movie is Captain America: Civil War</li>
+  <p>Favorite tv shows is the Flash and Pretty Little Liars<p>
+  <p>Favorite food is pizza and chicken<p>
+  <p>Favorite color is blue<p>
+  <p>Favorite website is Netflix<p>
+  <p>Favorite movie is Captain America: Civil War<p>
 </ul>
 
 
