--- a/aboutme.html
+++ b/aboutme.html
@@ -6,15 +6,15 @@
 
 
 
-<body style="background-color:blue;"> <p style="font-size:160%;">This is a paragraph.</p>
+<body style="background-color:blue;"> <p style="font-size:160%;"></p>
   <h1>About Me</h1>
   <p>Hi my name is Suyin. I am a rising junior. I'm from the Bronx in New York City. Some facts about me are listed below</p>
   <ul style="list-style-type:disc">
-  <li>Favorite tv shows is the Flash and Pretty Little Liars<li>
-  <li>Favorite food is pizza and chicken<li>
-  <li>Favorite color is blue<li>
-  <li>Favorite website is Netflix<li>
-  <li>Favorite movie is Captain America: Civil War<li>
+  <li>Favorite tv shows is the Flash and Pretty Little Liars</li>
+  <li>Favorite food is pizza and chicken</li>
+  <li>Favorite color is blue</li>
+  <li>Favorite website is Netflix</li>
+  <li>Favorite movie is Captain America: Civil War</li>
 </ul>
 
 
