--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
 
 
 
-<body style="background-color:blue;"> <p style="font-size:160%;"></p>
+<body style="background-color:blue;"> <p style="font-size:160%;"/>
   <h1>About Me</h1>
   <p>Hi my name is Suyin. I am a rising junior. I'm from the Bronx in New York City. Some facts about me are listed below</p>
   <ul style="list-style-type:disc">
