--- a/aboutme.html
+++ b/aboutme.html
@@ -6,8 +6,9 @@
 
 
 
-<body style="background-color:blue;"> <p style="font-size:160%;"/>
+<body style="background-color:blue;"> 
   <h1>About Me</h1>
+  <p style="font-size:160%;"/>
   <p>Hi my name is Suyin. I am a rising junior. I'm from the Bronx in New York City. Some facts about me are listed below</p>
   <ul style="list-style-type:disc">
   <li>Favorite tv shows is the Flash and Pretty Little Liars</li>
