--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
 
 
 
-<body style="background-color:blue;"> 
+<body style="background-color:blue;">
   <h1>About Me</h1>
   <p style="font-size:160%;"/>
   <p>Hi my name is Suyin. I am a rising junior. I'm from the Bronx in New York City. Some facts about me are listed below</p>
@@ -16,6 +16,7 @@
   <li>Favorite color is blue</li>
   <li>Favorite website is Netflix</li>
   <li>Favorite movie is Captain America: Civil War</li>
+  <img src=Civil-War-2.jpg width = "45" height = "20">
 </ul>
 
 
