--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 <body style="background-color:blue;">
   <h1>About Me</h1>
   <p style="font-size:160%;"/>
-  <p>Hi my name is Suyin. I am a rising junior. I'm from the Bronx in New York City. Some facts about me are listed below</p>
+  <p>Hi my name is Suyin. I am a rising junior. I'm from the Bronx in New York City. I go to Central Park East High School. Some facts about me are listed below</p>
   <ul style="list-style-type:disc">
   <li>Favorite tv shows is the Flash and Pretty Little Liars</li>
   <li>Favorite food is pizza and chicken</li>
@@ -17,6 +17,7 @@
   <li>Favorite website is Netflix</li>
   <li>Favorite movie is Captain America: Civil War</li>
   <img src=Civil-War-2.jpg width= "400" ,height= "400">
+  <li>Favorite subject is math and science.</li> 
 </ul>
 
 
