--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@
   <li>Favorite website is Netflix</li>
   <li>Favorite movie is Captain America: Civil War</li>
   <img src=Civil-War-2.jpg width= "400" ,height= "400">
-  <li>Favorite subject is math and science.</li> 
+  <li>Favorite subject is math and science</li> 
 </ul>
 
 
