--- a/aboutme.html
+++ b/aboutme.html
@@ -9,12 +9,14 @@
 <body style="background-color:blue;">
   <h1>About Me</h1>
   <p style="font-size:160%;"/>
-  <p>Hi my name is Suyin. I am a rising junior. I'm from the Bronx in New York City. I go to Central Park East High School. I love winter. I hate scary movies and insects. I love hearing music and hanging out with friends. Some facts about me are listed below</p>
+  <p>Hi my name is Suyin Asinc. I am a rising junior. I'm from the Bronx in New York City.
+I go to Central Park East High School. I love winter. I hate scary movies and insects. I love hearing music and hanging out with friends.
+Some facts about me are listed below</p>
   <ul style="list-style-type:disc">
   <li>Favorite tv shows is the Flash and Pretty Little Liars</li>
   <li>Favorite food is pizza and chicken</li>
   <li>Favorite color is blue</li>
-  <li>Favorite website is Netflix</li>
+  <li>Favorite website is Netflix and youtube</li>
   <li>Favorite movie is Captain America: Civil War</li>
   <img src=Civil-War-2.jpg width= "400" ,height= "400">
   <li>Favorite subject is math and science</li>
