--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,9 @@ Some facts about me are listed below</p>
   <li>Favorite tv shows is the Flash and Pretty Little Liars</li>
   <li>Favorite food is pizza and chicken</li>
   <li>Favorite color is blue</li>
-  <li>Favorite website is Netflix and YouTube</li> 
+  <li>Favorite website is Netflix and YouTube</li>
+       <a href="https://www.netflix.com/"</a>
+       <a href="https://www.youtube.com/"></a>    
   <li>Favorite movie is Captain America: Civil War</li>
   <img src=Civil-War-2.jpg width= "400" ,height= "400">
   <li>Favorite subject is math and science</li>
