--- a/aboutme.html
+++ b/aboutme.html
@@ -14,9 +14,11 @@ I go to Central Park East High School. I love winter. I hate scary movies and in
 Some facts about me are listed below</p>
   <ul style="list-style-type:disc">
   <li>Favorite tv shows is the Flash and Pretty Little Liars</li>
+  <img src=The_Flash.png width= "400", height= "400">
+  <img src=Pretty_Little_Liars.jpg width= "400", height="400">
   <li>Favorite food is pizza and chicken</li>
   <li>Favorite color is blue</li>
-  <li>Favorite website is Netflix and YouTube</li>   <a href="https://www.netflix.com/">Netflix</a> <a href="https://www.youtube.com/">YouTube</a>    
+  <li>Favorite website is Netflix and YouTube</li>   <a href="https://www.netflix.com/">Netflix</a> <a href="https://www.youtube.com/">YouTube</a>
   <li>Favorite movie is Captain America: Civil War</li>
   <img src=Civil-War-2.jpg width= "400" ,height= "400">
   <li>Favorite subject is math and science</li>
