--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
 
 <body style="background-color:blue;">
   <h1>About Me</h1>
-  <pstyle="font-size:200%;"/>>Hi my name is Suyin Asinc. I am a rising junior. I'm from the Bronx in New York City.
+  <p>style="font-size:200%;"/>>Hi my name is Suyin Asinc. I am a rising junior. I'm from the Bronx in New York City.
 I go to Central Park East High School. I love winter. I hate scary movies and insects. I love hearing music and hanging out with friends.
 Some facts about me are listed below</p>
   <ul style="list-style-type:disc">
