--- a/aboutme.html
+++ b/aboutme.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>Hello</title>
+  <title>About Me</title>
 </head>
 
 
 
 <body style="background-color:blue;">
-  <h1>About Me</h1>
-  <p>style="font-size:200%;"/>>Hi my name is Suyin Asinc. I am a rising junior. I'm from the Bronx in New York City.
+  <h1>About Me</h1><h2 style="background-color:red">
+Background-color set by using red
+</h2>
+
+  <p>Hi my name is Suyin Asinc. I am a rising junior. I'm from the Bronx in New York City.
 I go to Central Park East High School. I love winter. I hate scary movies and insects. I love hearing music and hanging out with friends.
 Some facts about me are listed below</p>
   <ul style="list-style-type:disc">
@@ -23,6 +26,12 @@ Some facts about me are listed below</p>
   <li>Favorite subject is math and science</li>
 </ul>
 
+
+
+
+<script>
+window.alert(5 + 6);
+</script>
 
 </body>
 
