--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,8 @@
 
 
 <body style="background-color:blue;">
-  <h1>About Me</h1><h2 style="background-color:red">
+  <h2 style="background-color:red">
+  <h1>About Me</h1>
 Background-color set by using red
 </h2>
 
@@ -30,7 +31,7 @@ Some facts about me are listed below</p>
 
 
 <script>
-window.alert(5 + 6);
+window.alert(Hi);
 </script>
 
 </body>
