--- a/aboutme.html
+++ b/aboutme.html
@@ -7,10 +7,9 @@
 
 
 <body style="background-color:blue;">
-  <h2 style="background-color:red">
+  <h2 style="background-color:red"></h2>
   <h1>About Me</h1>
-Background-color set by using red
-</h2>
+
 
   <p>Hi my name is Suyin Asinc. I am a rising junior. I'm from the Bronx in New York City.
 I go to Central Park East High School. I love winter. I hate scary movies and insects. I love hearing music and hanging out with friends.
@@ -31,7 +30,7 @@ Some facts about me are listed below</p>
 
 
 <script>
-window.alert(Hi);
+window.alert(Hi Welcome);
 </script>
 
 </body>
