--- a/aboutme.html
+++ b/aboutme.html
@@ -7,8 +7,7 @@
 
 
 <body style="background-color:blue;">
-  <h2 style="background-color:red"></h2>
-  <h1 style="background-color:red"> < About Me</h1>
+    <h1 style="background-color:red"> About Me</h1>
 
 
   <p>Hi my name is Suyin Asinc. I am a rising junior. I'm from the Bronx in New York City.
