--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
 
 
 <body style="background-color:blue;">
-    <h1 style="background-color:red">                          About Me</h1>
+    <h1 style="background-color:red"> About Me</h1>
 
 
   <p>Hi my name is Suyin Asinc. I am a rising junior. I'm from the Bronx in New York City.
@@ -29,7 +29,7 @@ Some facts about me are listed below</p>
 
 
 <script>
-window.alert(Hi Welcome);
+window.alert("Hi Welcome");
 </script>
 
 </body>
