--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
 <body style="background-color:blue;">
     <h1 style="background-color:red"> About Me</h1>
 
-    <p> style="font-size:200%;"Hi my name is Suyin Asinc. I am a rising junior. I'm from the Bronx in New York City.
+    <p> Hi my name is Suyin Asinc. I am a rising junior. I'm from the Bronx in New York City.
 I go to Central Park East High School. I love winter. I hate scary movies and insects. I love hearing music and hanging out with friends.
 Some facts about me are listed below</p>
   <ul style="list-style-type:disc">
