--- a/aboutme.html
+++ b/aboutme.html
@@ -7,12 +7,15 @@
 
 
 <body style="background-color:blue;">
-  
+
 </header><h1 style="background-color:red"> About Me</h1>
 
-    <p> Hi my name is Suyin Asinc. I am a rising junior. I'm from the Bronx in New York City.
-I go to Central Park East High School. I love winter. I hate scary movies and insects. I love hearing music and hanging out with friends.
-Some facts about me are listed below</p>
+</header> Bio </h1>
+    <p> Hi my name is Suyin Asinc, I'm a rising junior. I'm from the Bronx in New York City.
+
+I go to Central Park East High School. My favorite season is winter.
+I hate scary movies and insects. I love hearing music and hanging out with friends.
+Some other facts about me are listed below</p>
   <ul style="list-style-type:disc">
   <li>Favorite tv shows is the Flash and Pretty Little Liars</li>
   <img src=The_Flash.png width= "400", height= "400">
