--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
 
 </header><h1 style="background-color:red"> About Me</h1>
 
-</header> Bio </h1>
+</header style="background-color:red">  Bio </h1>
     <p> Hi my name is Suyin Asinc, I'm a rising junior. I'm from the Bronx in New York City.
 
 I go to Central Park East High School. My favorite season is winter.
