--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@ I go to Central Park East High School. My favorite season is winter.
 I hate scary movies and insects. I love hearing music and hanging out with friends.
 Some other facts about me are listed below</p>
   <ul style="list-style-type:disc">
-  <li> <h1 style="font-size:160%;">Favorite tv shows is the Flash and Pretty Little Liars</li>
+  <li style="font-size:160%;">Favorite tv shows is the Flash and Pretty Little Liars</li>
   <img src=The_Flash.png width= "400", height= "400">
   <img src=Pretty_Little_Liars.jpg width= "400", height="400">
   <li>Favorite food is pizza and chicken</li>
