--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,7 @@
     <p style="font-size:180%;">Hi my name is Suyin Asinc, I'm a rising junior. I'm from the Bronx in New York City.
 
 I go to Central Park East High School. My favorite season is winter.
-I hate scary movies and insects. I love hearing music and hanging out with friends.
+I hate scary movies and insects. I love to hear music and hang out with friends.
 Some other facts about me are listed below</p>
   <ul style="list-style-type:disc">
   <li style="font-size:160%;">Favorite tv shows is the Flash and Pretty Little Liars</li>
