--- a/aboutme.html
+++ b/aboutme.html
@@ -20,12 +20,12 @@ Some other facts about me are listed below</p>
   <li style="font-size:160%;">Favorite tv shows is the Flash and Pretty Little Liars</li>
   <img src=The_Flash.png width= "400", height= "400">
   <img src=Pretty_Little_Liars.jpg width= "400", height="400">
-  <li>Favorite food is pizza and chicken</li>
-  <li>Favorite color is blue</li>
-  <li>Favorite website is Netflix and YouTube</li>   <a href="https://www.netflix.com/">Netflix</a> <a href="https://www.youtube.com/">YouTube</a>
-  <li>Favorite movie is Captain America: Civil War</li>
+  <li style="font-size:160%;">Favorite food is pizza and chicken</li>
+  <li style="font-size:160%;">Favorite color is blue</li>
+  <li style="font-size:160%;">Favorite website is Netflix and YouTube</li>   <a href="https://www.netflix.com/">Netflix</a> <a href="https://www.youtube.com/">YouTube</a>
+  <li style="font-size:160%;">Favorite movie is Captain America: Civil War</li>
   <img src=Civil-War-2.jpg width= "400" ,height= "400">
-  <li>Favorite subject is math and science</li>
+  <li style="font-size:160%;">Favorite subject is math and science</li>
 </ul>
 
 
