--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,8 @@
 
 <body style="background-color:blue;">
 
-</header><h1 style="background-color:red"> About Me</h1>
+</header><h1 style="background-color:red"> <h1 style="text-align:center;">About Me</h1>
+
 
 </header> <h1 style="font-size:200%;">Bio </h1>
     <p style="font-size:180%;">Hi my name is Suyin Asinc, I'm a rising junior. I'm from the Bronx in New York City.
