--- a/aboutme.html
+++ b/aboutme.html
@@ -19,6 +19,20 @@ I hate scary movies and insects. I love to hear music and hang out with friends.
 Some other facts about me are listed below</p>
   <ul style="list-style-type:disc">
   <li style="font-size:180%;">Favorite tv shows is the Flash and Pretty Little Liars</li>
+  <img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="The_Flash.png" alt="Flash" height="200">
+
+<script>
+function bigImg(x) {
+    x.style.height = "300px";
+
+}
+
+function normalImg(x) {
+    x.style.height = "200px";
+
+}
+</script>
+
   <img src=The_Flash.png width= "400", height= "400">
   <img src=Pretty_Little_Liars.jpg width= "400", height="400">
   <li style="font-size:180%;">Favorite food is pizza and chicken</li>
