--- a/aboutme.html
+++ b/aboutme.html
@@ -19,7 +19,7 @@ I hate scary movies and insects. I love to hear music and hang out with friends.
 Some other facts about me are listed below</p>
   <ul style="list-style-type:disc">
   <li style="font-size:180%;">Favorite tv shows is the Flash and Pretty Little Liars</li>
-  <img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="The_Flash.png" alt="Flash" height="200">
+  <img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="The_Flash.png" alt="Flash" style="height=200px";>
 
 <script>
 function bigImg(x) {
