--- a/aboutme.html
+++ b/aboutme.html
@@ -17,6 +17,7 @@
 I go to Central Park East High School. My favorite season is winter.
 I hate scary movies and insects. I love to hear music and hang out with friends.
 Some other facts about me are listed below</p>
+
   <ul style="list-style-type:disc">
   <li style="font-size:180%;">Favorite tv shows is the Flash and Pretty Little Liars</li>
   <img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="The_Flash.png" alt="Flash" style="height=700px";>
@@ -24,14 +25,29 @@ Some other facts about me are listed below</p>
 <script>
 function bigImg(x) {
     x.style.height = "700px";
-
 }
 
 function normalImg(x) {
     x.style.height = "500px";
-
 }
 </script>
+
+<img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="Pretty_Little_Liars.jpg " alt="Liars" style="height=500px";>
+
+
+<script>
+function bigImg(x) {
+    x.style.height = "700px";
+}
+
+function normalImg(x) {
+    x.style.height = "500px";
+}
+</script>
+
+
+
+
   <img src=Pretty_Little_Liars.jpg width= "400", height="400">
   <li style="font-size:180%;">Favorite food is pizza and chicken</li>
   <li style="font-size:180%;">Favorite color is blue</li>
