--- a/aboutme.html
+++ b/aboutme.html
@@ -32,23 +32,19 @@ function normalImg(x) {
 }
 </script>
 
-<img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="Pretty_Little_Liars.jpg " alt="Liars" style="height=300px";>
+<img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="Pretty_Little_Liars.jpg " alt="Liars" style="width=300px";>
 
 
 <script>
 function bigImg(x) {
-    x.style.height = "400px";
+    x.style.width = "400px";
 }
 
 function normalImg(x) {
-    x.style.height = "300px";
+    x.style.width = "300px";
 }
 </script>
 
-
-
-
-  <img src=Pretty_Little_Liars.jpg width= "400", height="400">
   <li style="font-size:180%;">Favorite food is pizza and chicken</li>
   <li style="font-size:180%;">Favorite color is blue</li>
   <li style="font-size:180%;">Favorite website is Netflix and YouTube</li>   <a href="https://www.netflix.com/">Netflix</a> <a href="https://www.youtube.com/">YouTube</a>
