--- a/aboutme.html
+++ b/aboutme.html
@@ -32,16 +32,16 @@ function normalImg(x) {
 }
 </script>
 
-<img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="Pretty_Little_Liars.jpg " alt="Liars" style="width=300px";>
+<img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="Pretty_Little_Liars.jpg " alt="Liars" style="height=300px";>
 
 
 <script>
 function bigImg(x) {
-    x.style.width = "400px";
+    x.style.height = "400px";
 }
 
 function normalImg(x) {
-    x.style.width = "300px";
+    x.style.height = "300px";
 }
 </script>
 
