--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,11 @@
 
 <body style="background-color:blue;">
 
+  <p id="demo">More info.</p>
+
+  <button type="button" onclick='document.getElementById("demo").innerHTML = "Hi"'>Click Me!</button>
+
+
 </header><h1 style="background-color:red"> <h1 style="text-align:center;">About Me</h1>
 
 
@@ -50,7 +55,6 @@ function normalImg(x) {
   <li style="font-size:180%;">Favorite website is Netflix and YouTube</li>   <a href="https://www.netflix.com/">Netflix</a> <a href="https://www.youtube.com/">YouTube</a>
   <li style="font-size:180%;">Favorite movie is Captain America: Civil War</li>
   <img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="Civil-War-2.jpg" alt="War" style=height="300px";>
-
 
   <script>
   function bigImg(x) {
