--- a/aboutme.html
+++ b/aboutme.html
@@ -7,18 +7,16 @@
 
 
 <body style="background-color:blue;">
-
-  <p id="demo">More info.</p>
-
-  <button type="button" onclick='document.getElementById("demo").innerHTML = "Hi"'>Click Me!</button>
-
-
 </header><h1 style="background-color:red"> <h1 style="text-align:center;">About Me</h1>
 
 
 </header> <h1 style="font-size:200%;">Bio </h1>
-    <p style="font-size:180%;">Hi my name is Suyin Asinc, I'm a rising junior. I'm from the Bronx in New York City.
+<p id="demo">Bio.</p>
 
+<button type="button" onclick='document.getElementById("demo").innerHTML = "My birthday is in March. I have a dog name Buddy."'>Click Me!</button>
+
+
+    <p style="font-size:180%;">Hi my name is Suyin Asinc, I'm a rising junior. I'm from the Bronx in New York City.
 I go to Central Park East High School. My favorite season is winter.
 I hate scary movies and insects. I love to hear music and hang out with friends.
 Some other facts about me are listed below</p>
