--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
 
 
 </header> <h1 style="font-size:200%;">Bio </h1>
-<p id="demo">Bio.</p>
+<p id="demo">More info.</p>
 
 <button type="button" onclick='document.getElementById("demo").innerHTML = "My birthday is in March. I have a dog name Buddy."'>Click Me!</button>
 
